Se agregó autenticación, caché, factory. Se agregaron y corrigieron test unitarios.
